2000-06-15  Jody Goldberg <jgoldberg@home.com>

	* gnome-score.c (print_ascore) : setlocale returns a static buffer.
	  Copy it to safety.  Set the locale AFTER storing the current
	  setting.
	(log_score) : Ditto.
	(gnome_score_get_notable) : Ditto.

	* gnome-config.c (_gnome_config_get_float_with_default): Ditto.
	(_gnome_config_set_float) : Ditto.

Mon Jun 12 18:40:33 2000  George Lebl <jirka@5z.com>

	* gnome-util.c: update the comments.  Just to make gtk-doc work on
	  g_file_test, and take out the "will be removed thing on
	  g_file_exists as it won't

Fri May 26 12:24:02 2000  George Lebl <jirka@5z.com>

	* gnome-score.c: Applied patch from Dennis Bjorklund
	  <dennisb@cs.chalmers.se> to fix another unprotected atof with
	  setting locale to "C" and then back.

2000-05-18  Miguel de Icaza  <miguel@gnu.org>

	* gnome-config.c (gnome_config_iterator_next): Implement as
	documented.  
	
Sat May 06 16:46:13 2000  George Lebl <jirka@5z.com>

	* gnome-config.c (_gnome_config_get_float_with_default)
	  (_gnome_config_set_float): setlocae for LC_NUMERIC to "C" and
	  then back to original locale when reading and writing floats
	  so that we can read/write floats over different locales

	* gnome-score.c (gnome_get_score_file_name) (log_score): 
	  The same as above.  Fixes bugs #10404, #10257

Fri May 05 20:53:11 2000  George Lebl <jirka@5z.com>

	* gnome-url.c: gnome_url_show had it's return value inversed, duh!

Fri May 05 19:22:30 2000  George Lebl <jirka@5z.com>

	* gnome-ditem.c: include gnome-i18nP.h rather then gnome-i18n.h

	* gnome-url.[ch]: add an error argument to gnome_url_show_full
	  Fix one memory leak and one GList corruption bug.  Made it use
	  gnome_exec_async rather then shell.  It will now correctly handle
	  URIs with weird characters and no longer uses printf format strings
	  taken from files.  When the handler is gnome-moz-remote, it
	  first checks if the program ('netscape' or whatever gnome-moz-remote
	  uses) actually exists.
