@@ -1,3 +1,14 @@
+Wed Jul 12 02:25:14 2000  George Lebl <jirka@5z.com>
+
+	* gnome-config.c, gnome-ditem.c, gnome-i18n.[ch], gnome-mime-info.c,
+	  gnome-paper.[ch]:  Where an internal string or list is returned,
+	  make the return constant.  gnome_i18n_get_preferred_language is
+	  not constant, so remove the "const"
+
+	* gnome-mime-info.c: before reversing the language list, make a copy
+
+	* gnop-util.c: use g_strdup and not strdup
+
 2000-06-15  Jody Goldberg <jgoldberg@home.com>
 
 	* gnome-score.c (print_ascore) : setlocale returns a static buffer.
